# PA3

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  a.out  interview.txt  multi-lookup.c  multi-lookup.h  performance.txt  results.txt  serviced.txt  test.c  test.h
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
pthreads-material/: a.out  pgm2  pgm3  pgm4  pgm5
